// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toIncludeAnyMembers fails when given array contains array value 1`] = `
"expect(received).not.toIncludeAnyMembers(expected)

Expected list to not include any of the following members:
  [[{\\"hello\\": \\"world\\"}], 7]
Received:
  [[{\\"hello\\": \\"world\\"}]]"
`;

exports[`.not.toIncludeAnyMembers fails when given array contains object value 1`] = `
"expect(received).not.toIncludeAnyMembers(expected)

Expected list to not include any of the following members:
  [{\\"foo\\": \\"bar\\"}]
Received:
  [{\\"foo\\": \\"bar\\"}]"
`;

exports[`.not.toIncludeAnyMembers fails when given object contains primitive value 1`] = `
"expect(received).not.toIncludeAnyMembers(expected)

Expected list to not include any of the following members:
  [7, 8]
Received:
  [7]"
`;

exports[`.toIncludeAnyMembers fails when expected object does not contain array value 1`] = `
"expect(received).toIncludeAnyMembers(expected)

Expected list to include any of the following members:
  \\"world\\"
Received:
  [1, 2, 3]"
`;

exports[`.toIncludeAnyMembers fails when given array does not contain any members  1`] = `
"expect(received).toIncludeAnyMembers(expected)

Expected list to include any of the following members:
  [1, 2, 3]
Received:
  [4, 5, 6]"
`;

exports[`.toIncludeAnyMembers fails when given object is not an array 1`] = `
"expect(received).toIncludeAnyMembers(expected)

Expected list to include any of the following members:
  [1, 2, 3]
Received:
  7"
`;
